--- a/src/main/resources/templates/purchasingmanagement1/drug_information_maintenance1.html
+++ b/src/main/resources/templates/purchasingmanagement1/drug_information_maintenance1.html
@@ -26,7 +26,7 @@
                     $(".context").append('<tr><td type="hidden">'+data[i].id+'</td><td>'+data[i].serialNumber + '</td><td>' +data[i].commonName+ '</td><td>'
                     +data[i].durgsFrom.drugFrom + '</td><td>'+ data[i].specification+ '</td><td>'+ data[i].unit+ '</td><td>'
                         + data[i].conversionFraction+ '</td><td>'+ data[i].enterprise.enterpriseName+ '</td><td>'+ data[i].tradeName+ '</td><td>'
-                        + data[i].biddingPrice+ '</td><td>'+ data[i].qualityLevel.level+ '</td><td>'+ data[i].drugCategory.drugCategoryName+ '</td><td>'+ data[i].drugTransactionStatusId
+                        + data[i].biddingPrice+ '</td><td>'+ data[i].qualityLevel.level+ '</td><td>'+ data[i].drugCategory.drugCategoryName+ '</td><td>'+ data[i].drugTransactionStatus.drugTransactionExplain
                         + '</td><td><button class="btn btn-success btn-sm" data-toggle="modal" data-target="#editModal1" onclick="selectById( '+data[i].id+')">查看'+'</button></td><td><button class="btn btn-warning btn-sm" data-toggle="modal" data-target="#editModal1" onclick="selectById( '+data[i].id+')"> 修改'+'</button></td><td><button class="btn btn-danger btn-sm" onclick="remove('+data[i].id+')">删除'+'</button></td></tr>')
                 }
             })
@@ -59,9 +59,9 @@
             function (data) {
                 for (var i = 0;i<data.length;i++){
                     $(".context").append('<tr><td type="hidden">'+data[i].id+'</td><td>'+data[i].serialNumber + '</td><td>' +data[i].commonName+ '</td><td>'
-                        +data[i].dosageFormId + '</td><td>'+ data[i].specification+ '</td><td>'+ data[i].unit+ '</td><td>'
-                        + data[i].conversionFraction+ '</td><td>'+ data[i].enterpriseNameId+ '</td><td>'+ data[i].tradeName+ '</td><td>'
-                        + data[i].biddingPrice+ '</td><td>'+ data[i].qualityLevelId+ '</td><td>'+ data[i].drugCategoryId+ '</td><td>'+ data[i].drugTransactionStatusId
+                        +data[i].durgsFrom.drugFrom + '</td><td>'+ data[i].specification+ '</td><td>'+ data[i].unit+ '</td><td>'
+                        + data[i].conversionFraction+ '</td><td>'+ data[i].enterprise.enterpriseName+ '</td><td>'+ data[i].tradeName+ '</td><td>'
+                        + data[i].biddingPrice+ '</td><td>'+ data[i].qualityLevel.level+ '</td><td>'+ data[i].drugCategory.drugCategoryName+ '</td><td>'+ data[i].drugTransactionStatus.drugTransactionExplain
                         + '</td><td><button class="btn btn-success btn-sm" data-toggle="modal" data-target="#editModal1" onclick="selectById( '+data[i].id+')">查看'+'</button></td><td><button class="btn btn-warning btn-sm" data-toggle="modal" data-target="#editModal1" onclick="selectById( '+data[i].id+')"> 修改'+'</button></td><td><button class="btn btn-danger btn-sm" onclick="remove('+data[i].id+')">删除'+'</button></td></tr>')
                 }
             })
@@ -92,6 +92,7 @@
             var validityOfDrugInspectionReport = $("#validityOfDrugInspectionReport1").val();
             var drugTransactionStatusId = $("#drugTransactionStatusId1").val();
             var descriptionOfProducts = $("#descriptionOfProducts1").val();
+            var drugCategoryId = $("#drugCategoryId1").val();
             url="updateDrug";
             $.get(url,{"id":id,"serialNumber":serialNumber,"commonName":commonName,"dosageFormId":dosageFormId,
                 "specification":specification,"unit":unit,"conversionFraction":conversionFraction,
@@ -101,7 +102,7 @@
                 "sourceOfRetailPrice":sourceOfRetailPrice,"qualityLevelId":qualityLevelId,"qualityLevelDescription":qualityLevelDescription,
                 "drugInspectionReport":drugInspectionReport,"drugInspectionReportNumber":drugInspectionReportNumber,
                 "validityOfDrugInspectionReport":validityOfDrugInspectionReport,"drugTransactionStatusId":drugTransactionStatusId,
-                "descriptionOfProducts":descriptionOfProducts},function (data) {
+                "descriptionOfProducts":descriptionOfProducts,"drugCategoryId":drugCategoryId},function (data) {
                 if(data>0){
                     alert("修改成功")
                     window.location.reload();
@@ -121,11 +122,12 @@
             url="selectById";
             $.get(url,{"id":id},function (data) {
                 if (data != null){
+                    console.log(data);
                     alert("药品详细信息");
                     $("#id").val(data.id);
                     $("#serialNumber1").val(data.serialNumber);
                     $("#commonName1").val(data.commonName);//通用名
-                    $("#dosageFormId1").val(data.dosageFormId);//剂型id
+                    $("#dosageFormId1").val(data.durgsFrom.durgFromId);//剂型
                     $("#specification1").val(data.specification);//规格
                     $("#unit1").val(data.unit);
                     $("#conversionFraction1").val(data.conversionFraction);
@@ -146,6 +148,7 @@
                     $("#validityOfDrugInspectionReport1").val(data.validityOfDrugInspectionReport);
                     $("#drugTransactionStatusId1").val(data.drugTransactionStatusId);
                     $("#descriptionOfProducts1").val(data.descriptionOfProducts);
+                    $("#drugCategoryId1").val(data.drugCategoryId);
                 }else{
                     alert("请检查网络")
                 }
@@ -193,13 +196,27 @@
             <td>
                 <select id="dosageFormId" style="width: 50%;height: 20%">
                     <option value="0">请选择</option>
-                    <option value="1">1</option>
-                    <option value="2">2</option>
-                    <option value="3">3</option>
-                    <option value="4">4</option>
-                    <option value="5">5</option>
-                    <option value="6">6</option>
-                    <option value="7">7</option>
+                    <option value="1">片剂</option>
+                    <option value="2">丸剂</option>
+                    <option value="3">硬胶囊剂</option>
+                    <option value="4">软胶囊剂</option>
+                    <option value="5">口服液</option>
+                    <option value="6">口服溶液剂</option>
+                    <option value="7">糖浆剂</option>
+                    <option value="8">混悬剂</option>
+                    <option value="9">口服酊剂</option>
+                    <option value="10">煎膏剂</option>
+                    <option value="11">颗粒剂</option>
+                    <option value="12">散剂</option>
+                    <option value="13">吸入剂</option>
+                    <option value="14">干混悬剂</option>
+                    <option value="15">合剂</option>
+                    <option value="16">注射液</option>
+                    <option value="17">粉针剂</option>
+                    <option value="18">外用酊剂类</option>
+                    <option value="19">凝胶剂</option>
+                    <option value="20">喷雾剂</option>
+                    <option value="21">滴剂</option>
                 </select>
             </td>
             <td style="text-align: right">
@@ -228,7 +245,17 @@
                  <span style="white-space: nowrap;display: inline-block;color: #0E74B4">生产企业：</span>
             </td>
             <td>
-                <input class="form-control" id="enterpriseNameId">
+                <select style="width:50%;height: 10%" id="enterpriseNameId1" name="enterpriseNameId1">
+                    <option value="0">请选择</option>
+                    <option value="1">哈药六厂有限公司</option>
+                    <option value="2">六神有限公司</option>
+                    <option value="3">神州有限公司</option>
+                    <option value="4">花露水有限公司</option>
+                    <option value="5">无神有限公司</option>
+                    <option value="6">口服溶液剂</option>
+                    <option value="7">九州有限公司</option>
+                </select>
+                <!--<input class="form-control" id="enterpriseNameId">-->
             </td>
             <td style="text-align: right">
                 <span style="white-space: nowrap;display: inline-block;color: #0E74B4">商品名：</span>
@@ -250,8 +277,13 @@
             <td>
                 <select style="width: 50%;height: 20%" id="qualityLevelId">
                     <option value="0">请选择</option>
-                    <option value="1">1</option>
-                    <option value="2">2</option>
+                    <option value="1">国家一类新药</option>
+                    <option value="2">国家科学进步奖</option>
+                    <option value="3">专利</option>
+                    <option value="4">原研</option>
+                    <option value="5">单独定价</option>
+                    <option value="6">优质优价</option>
+                    <option value="7">GMP</option>
                 </select>
             </td>
         </tr>
@@ -262,12 +294,8 @@
             <td>
                 <select style="width: 50%;height: 20%" id="drugCategoryId">
                     <option value="0">请选择</option>
-                    <option value="1">儿童用药</option>
-                    <option value="2">营养治疗药</option>
-                    <option value="3">中成药</option>
-                    <option value="4">中西成药</option>
-                    <option value="5">感冒药</option>
-                    <option value="6">退烧药</option>
+                    <option value="1">处方药</option>
+                    <option value="2">非处方药</option>
                 </select>
                 <!-- <input class="form-control" id="" style="width: 50%;height: 20%">-->
             </td>
@@ -277,8 +305,8 @@
             <td>
                 <select style="width: 50%;height: 20%" id="drugTransactionStatusId">
                     <option value="0">请选择</option>
-                    <option value="1">1</option>
-                    <option value="2">2</option>
+                    <option value="1">正常</option>
+                    <option value="2">取消交易</option>
                 </select>
                 <!-- <input class="form-control" id="" >-->
             </td>
@@ -407,13 +435,21 @@
                     <tr>
                         <td>剂型:</td>
                         <td>
-                            <input id="dosageFormId1" name="dosageFormId1" class="form-control"></td>
-                            <!--<select style="width:50%;height: 10%" id="dosageFormId1" name="dosageFormId">
+                            <!--<input id="dosageFormId1" name="dosageFormId1" class="form-control">-->
+                            <select style="width:50%;height: 10%" id="dosageFormId1" name="dosageFormId">
                                 <option value="0">请选择</option>
-                                <option value="1">1</option>
-                                <option value="2">2</option>
-                                <option value="3">3</option>
-                            </select>-->
+                                <option value="1">片剂</option>
+                                <option value="2">丸剂</option>
+                                <option value="3">硬胶囊剂</option>
+                                <option value="4">软胶囊剂</option>
+                                <option value="5">口服液</option>
+                                <option value="6">口服溶液剂</option>
+                                <option value="7">糖浆剂</option>
+                                <option value="8">混悬剂</option>
+                                <option value="9">口服酊剂</option>
+                                <option value="10">煎膏剂</option>
+                            </select>
+                        </td>
                         <td>规格:</td>
                         <td><input id="specification1" name="specification1" class="form-control"></td>
                     </tr>
@@ -425,7 +461,18 @@
                     </tr>
                     <tr>
                         <td>生产企业名称</td>
-                        <td><input class="form-control" id="enterpriseNameId1" name="enterpriseNameId1"></td>
+                        <td>
+                            <select style="width:50%;height: 10%" id="enterpriseNameId1" name="enterpriseNameId1">
+                                <option value="0">请选择</option>
+                                <option value="1">哈药六厂有限公司</option>
+                                <option value="2">六神有限公司</option>
+                                <option value="3">神州有限公司</option>
+                                <option value="4">花露水有限公司</option>
+                                <option value="5">无神有限公司</option>
+                                <option value="6">口服溶液剂</option>
+                                <option value="7">九州有限公司</option>
+                            </select>
+                        </td>
                         <td>商品名</td>
                         <td><input class="form-control" id="tradeName1" name="tradeName1"></td>
                     </tr>
@@ -438,8 +485,8 @@
                     <tr>
                         <td>是否进口药</td>
                         <td style="word-break: keep-all;white-space: nowrap" >
-                            <input id="is" type="radio" value="0" style="width: 15px;height: 15px" name="importedDrug"><span>是</span>
-                            <input id="no" type="radio" value="1" style="width: 15px;height: 15px" name="importedDrug"><span>否</span>
+                            <input id="is" type="radio" value="1" style="width: 15px;height: 15px" name="importedDrug"><span>是</span>
+                            <input id="no" type="radio" value="2" style="width: 15px;height: 15px" name="importedDrug"><span>否</span>
                         </td>
                         <td>批准文号有效期</td>
                         <td><input class="form-control" id="validityOfApprovalNumber1" name="validityOfApprovalNumber1"></td>
@@ -459,10 +506,17 @@
                     <tr>
                         <td>质量层次</td>
                         <td>
-                            <input class="form-control" id="qualityLevelId1" name="qualityLevelId1">
-                            <!--<select style="width:50%;height: 10%" id="qualityLevelId1" name="qualityLevelId">
+                            <!--<input class="form-control" id="qualityLevelId1" name="qualityLevelId1">-->
+                            <select style="width:50%;height: 10%" id="qualityLevelId1" name="qualityLevelId">
                                 <option value="0">请选择</option>
-                            </select>-->
+                                <option value="1">国家一类新药</option>
+                                <option value="2">国家科学进步奖</option>
+                                <option value="3">专利</option>
+                                <option value="4">原研</option>
+                                <option value="5">单独定价</option>
+                                <option value="6">优质优价</option>
+                                <option value="7">GMP</option>
+                            </select>
                         </td>
                         <td>质量层次说明</td>
                         <td>
@@ -483,10 +537,23 @@
                         <td><input class="form-control" id="validityOfDrugInspectionReport1" name="validityOfDrugInspectionReport1"></td>
                         <td>药品交易状态:</td>
                         <td>
-                            <input class="form-control" id="drugTransactionStatusId1" name="drugTransactionStatusId1">
-                            <!--<select style="width:50%;height: 10%" id="drugTransactionStatusId1" name="drugTransactionStatusId">
+                            <!--<input class="form-control" id="drugTransactionStatusId1" name="drugTransactionStatusId1">-->
+                            <select style="width:50%;height: 10%" id="drugTransactionStatusId1" name="drugTransactionStatusId">
                                 <option value="0">请选择</option>
-                             </select>-->
+                                <option value="1">正常</option>
+                                <option value="2">取消交易</option>
+                             </select>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>药品类别:</td>
+                        <td>
+                            <!--<input class="form-control" id="drugTransactionStatusId1" name="drugTransactionStatusId1">-->
+                            <select style="width:50%;height: 10%" id="drugCategoryId1" name="drugCategoryId1">
+                                <option value="0">请选择</option>
+                                <option value="1">处方药</option>
+                                <option value="2">非处方药</option>
+                            </select>
                         </td>
                     </tr>
                     <tr>
