--- a/src/main/resources/templates/purchasingmanagement1/purchase_directory_maintenance1.html
+++ b/src/main/resources/templates/purchasingmanagement1/purchase_directory_maintenance1.html
@@ -17,15 +17,6 @@
     <script src="../js/jQuery/jquery-2.2.3.min.js"></script>
     <script src="../js/plugins/bootstrap/js/bootstrap.min.js"></script>
 
-    <script src="js/supervision/Drug_item_maintenance.js"></script>
-
-
-    <script type="text/javascript">
-        function down(){
-            window.location.href="down";
-        }
-    </script>
-
 </head>
 <body class="hold-transition skin-red sidebar-mini" ng-controller="PurchasingManagementController1">
 <!-- .box-body -->
@@ -40,12 +31,12 @@
                 <span style="white-space: nowrap;display: inline-block;color: #0E74B4">药品流水号：</span>
             </td>
             <td >
-                <input class="form-control" id="searchEntity_unitName">
+                <input class="form-control" id="serialNumber">
             </td>
             <td style="text-align: right"><span style="white-space: nowrap;display: inline-block;color: #0E74B4">通用名：</span>
             </td>
             <td >
-                <input class="form-control" id="searchEntity_organizationalCode">
+                <input class="form-control" id="commonName">
             </td>
         </tr>
         <tr>
@@ -53,22 +44,36 @@
                 <span style="white-space: nowrap;display: inline-block;color: #0E74B4">剂型：</span>
             </td>
             <td>
-                <select id="durgfrom" style="width: 50%;height: 20%">
-                    <option value="0">请选择</option>
-                    <option value="1">注射剂</option>
-                    <option value="2">口服剂</option>
-                    <option value="3">糖浆剂</option>
-                    <option value="4">颗粒剂</option>
-                    <option value="5">喷雾剂</option>
-                    <option value="6">凝胶剂</option>
-                    <option value="7">吸入剂</option>
+                <select id="dosageFormId" style="width: 50%;height: 20%">
+                    <<option value="0">请选择</option>
+                    <option value="1">片剂</option>
+                    <option value="2">丸剂</option>
+                    <option value="3">硬胶囊剂</option>
+                    <option value="4">软胶囊剂</option>
+                    <option value="5">口服液</option>
+                    <option value="6">口服溶液剂</option>
+                    <option value="7">糖浆剂</option>
+                    <option value="8">混悬剂</option>
+                    <option value="9">口服酊剂</option>
+                    <option value="10">煎膏剂</option>
+                    <option value="11">颗粒剂</option>
+                    <option value="12">散剂</option>
+                    <option value="13">吸入剂</option>
+                    <option value="14">干混悬剂</option>
+                    <option value="15">合剂</option>
+                    <option value="16">注射液</option>
+                    <option value="17">粉针剂</option>
+                    <option value="18">外用酊剂类</option>
+                    <option value="19">凝胶剂</option>
+                    <option value="20">喷雾剂</option>
+                    <option value="21">滴剂</option>
                 </select>
             </td>
             <td style="text-align: right">
                 <span style="white-space: nowrap;display: inline-block;color: #0E74B4">规格：</span>
             </td>
             <td>
-                <input class="form-control">
+                <input class="form-control" id="specification">
             </td>
         </tr>
         <tr>
@@ -76,13 +81,13 @@
                 <span style="white-space: nowrap;display: inline-block;color: #0E74B4">单位：</span>
             </td>
             <td>
-                <input class="form-control">
+                <input class="form-control" id="unit">
             </td>
             <td style="text-align: right">
                 <span style="white-space: nowrap;display: inline-block;color: #0E74B4">转换系数：</span>
             </td>
             <td>
-                <input class="form-control">
+                <input class="form-control" id="conversionFraction">
             </td>
         </tr>
         <tr>
@@ -90,13 +95,23 @@
                 <span style="white-space: nowrap;display: inline-block;color: #0E74B4">生产企业：</span>
             </td>
             <td>
-                <input class="form-control">
+                <select style="width:50%;height: 10%" id="enterpriseNameId" name="enterpriseNameId">
+                    <option value="0">请选择</option>
+                    <option value="1">哈药六厂有限公司</option>
+                    <option value="2">六神有限公司</option>
+                    <option value="3">神州有限公司</option>
+                    <option value="4">花露水有限公司</option>
+                    <option value="5">无神有限公司</option>
+                    <option value="6">口服溶液剂</option>
+                    <option value="7">九州有限公司</option>
+                </select>
+                <!-- <input class="form-control" id="enterpriseNameId">-->
             </td>
             <td style="text-align: right">
                 <span style="white-space: nowrap;display: inline-block;color: #0E74B4">商品名：</span>
             </td>
             <td>
-                <input class="form-control">
+                <input class="form-control" id="tradeName">
             </td>
         </tr>
         <tr>
@@ -104,20 +119,16 @@
                 <span style="white-space: nowrap;display: inline-block;color: #0E74B4">价格范围：</span>
             </td>
             <td style="word-break: keep-all;white-space: nowrap;width: 32%">
-                <input style="width: 23%"><span style="color: #0E74B4">至</span><input style="width: 23%;">
+                <input  id="biddingPrice">
             </td>
             <td style="text-align: right">
                 <span style="white-space: nowrap;display: inline-block;color: #0E74B4">药品类别：</span>
             </td>
             <td>
-                <select style="width: 50%;height: 20%">
+                <select style="width: 50%;height: 20%" id="drugCategoryId">
                     <option value="0">请选择</option>
-                    <option value="1">儿童用药</option>
-                    <option value="2">营养治疗药</option>
-                    <option value="3">中成药</option>
-                    <option value="4">中西成药</option>
-                    <option value="5">感冒药</option>
-                    <option value="6">退烧药</option>
+                    <option value="1">处方药</option>
+                    <option value="2">非处方药</option>
                 </select>
             </td>
         </tr>
@@ -126,8 +137,10 @@
                 <span style="white-space: nowrap;display: inline-block;color: #0E74B4">供货商供货状态：</span>
             </td>
             <td>
-                <select style="width: 50%;height: 20%">
+                <select style="width: 50%;height: 20%" id="availabilityStatus">
                     <option value="0">请选择</option>
+                    <option value="1">正常</option>
+                    <option value="2">不正常</option>
                 </select>
                 <!-- <input class="form-control" id="" style="width: 50%;height: 20%">-->
             </td>
@@ -135,8 +148,10 @@
                 <span style="white-space: nowrap;display: inline-block;color: #0E74B4">药品交易状态：</span>
             </td>
             <td>
-                <select style="width: 50%;height: 20%">
+                <select style="width: 50%;height: 20%" id="drugTransactionStatusId">
                     <option value="0">请选择</option>
+                    <option value="1">正常</option>
+                    <option value="2">取消交易</option>
                 </select>
                 <!-- <input class="form-control" id="" >-->
             </td>
